--- a/src/slideshow.css
+++ b/src/slideshow.css
@@ -22,14 +22,21 @@ body {
   width: 100%;
   height: 100%;
   border: 5px solid #1C1D21;
-  overflow: hidden;  
+  overflow: hidden;
+}
+
+#Slider figure {
+  max-height: 100%;
+  max-width: 100%;
+  flex: 0 0 100%;
+  padding: 0;
+  margin: 0;
+  transition: all 1s;
 }
 
 #Slider img {
-  max-width:100%;
-  flex: 0 0 100%;
-  transition: all 1s;
-  object-fit: contain;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 #Arrows {
@@ -49,7 +56,6 @@ body {
   background-color: rgba(255, 255, 255, .25);
   color: #1C1D21;
   cursor: pointer;
-  height: 60px;
   padding: 15px;
   transition: background-color .5s, color .5s;
 }
