--- a/src/slideshow.css
+++ b/src/slideshow.css
@@ -4,7 +4,7 @@
 
 html {
   align-items: center;
-  background-color: #31353D;
+  background-color: #C1C5CD;
   display: flex;
   justify-content: center;
 }
@@ -34,9 +34,15 @@ body {
   transition: all 1s;
 }
 
+figcaption {
+  font-size: 2.0rem;
+  text-align: center;
+}
+
 #Slider img {
   max-height: 100%;
   max-width: 100%;
+  object-fit: contain;
 }
 
 #Arrows {
