--- a/src/slideshow.css
+++ b/src/slideshow.css
@@ -32,17 +32,22 @@ body {
   padding: 0;
   margin: 0;
   transition: all 1s;
+  object-fit: contain;
 }
 
 figcaption {
+  max-height: 10%;
   font-size: 2.0rem;
   text-align: center;
 }
 
 #Slider img {
-  max-height: 100%;
+  max-height: 90%;
   max-width: 100%;
   object-fit: contain;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #Arrows {
